<resources>
    <string name="app_name">PhoneSpecs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="releaseData">Release Date:</string>
    <string name="dimension">Dimension:</string>
    <string name="os">OS</string>
    <string name="storage">Storage</string>
    <string name="error">Something Went Wrong!!</string>
    <string name="noSuchItem">No Such Item Found !!! Try Again</string>
</resources>